--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -49,10 +49,7 @@ jobs:
     strategy:
       matrix:
         os:
-          - ubuntu-latest
-          - macos-latest
-          - windows-latest
-          - windows-11-arm
+          - self-hosted
         bun-version:
           - latest
           - canary
@@ -100,10 +97,7 @@ jobs:
     strategy:
       matrix:
         os:
-          - ubuntu-latest
-          - macos-latest
-          - windows-latest
-          - windows-11-arm
+          - self-hosted
 
         file:
           - name: package.json (packageManager bun@1.1.0)
@@ -173,10 +167,7 @@ jobs:
     strategy:
       matrix:
         os:
-          - ubuntu-latest
-          - macos-latest
-          - windows-latest
-          - windows-11-arm
+          - self-hosted
 
         file:
           - name: package.json (packageManager bun@1.1.0)
@@ -220,9 +211,7 @@ jobs:
     strategy:
       matrix:
         os:
-          - ubuntu-latest
-          - macos-latest
-          - windows-latest
+          - self-hosted
 
     steps:
       - name: 📥 Checkout
@@ -247,7 +236,7 @@ jobs:
     strategy:
       matrix:
         os:
-          - ubuntu-latest
+          - self-hosted
 
     steps:
       - name: 📥 Checkout
